Added CRUD User.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 docker-compose.yml
 ###< Other files and folders ###
 
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
