--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -2,64 +2,82 @@ version: '3.4'
 services:
 
   pampling_nginx:
-      image: nginx:1.19.0-alpine
-      container_name: pampling_nginx
-      restart: always
-      volumes:
-        - ./:/usr/src/app
-        - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      ports:
-        - ${DOCKER_NGINX_PORTS}
-      depends_on:
-        - pampling_php
-      networks:
-        - pampling-network
+    image: nginx:1.19.0-alpine
+    container_name: pampling_nginx
+    restart: always
+    volumes:
+      - ./:/usr/src/app
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - ${DOCKER_NGINX_PORTS}
+    depends_on:
+      - pampling_php
+    networks:
+      - pampling-network
 
   pampling_php:
-      build:
-        context: .
-        dockerfile: docker/php/Dockerfile
-      image: pampling_php:1.2.0
-      environment:
-        PHP_IDE_CONFIG: serverName=pampling_php
-      container_name: pampling_php
-      restart: always
-      user: 1000:1000
-      volumes:
-        - ./:/usr/src/app
-        - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini
-        - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
-      ports:
-        -  ${DOCKER_PHP_PORTS}
-      depends_on:
-        - pampling_db
-      dns:
-        - 8.8.8.8
-      networks:
-        - pampling-network
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    image: pampling_php:1.2.0
+    environment:
+      PHP_IDE_CONFIG: serverName=pampling_php
+    container_name: pampling_php
+    restart: always
+    user: 1000:1000
+    volumes:
+      - ./:/usr/src/app
+      - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini
+      - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+    ports:
+      -  ${DOCKER_PHP_PORTS}
+    depends_on:
+      - pampling_db
+    dns:
+      - 8.8.8.8
+    networks:
+      - pampling-network
 
   pampling_db:
-      image: mysql:8.0
-      container_name: pampling_db
-      build:
-        context: ./docker/database
-      restart: always
-      volumes:
-        - pampling_dbdata:/var/lib/mysql
-      ports:
-        - ${DOCKER_DB_PORTS}
-      environment:
-        MYSQL_DATABASE: pampling_db
-        MYSQL_USER: user
-        MYSQL_PASSWORD: password
-        MYSQL_ROOT_PASSWORD: root
-        MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-        TZ: Europe/Madrid
-      command: mysqld --sql_mode="STRICT_ALL_TABLES,NO_ENGINE_SUBSTITUTION"
-      networks:
-        - pampling-network
+    image: mysql:8.0
+    container_name: pampling_db
+    build:
+      context: ./docker/database
+    restart: always
+    volumes:
+      - pampling_dbdata:/var/lib/mysql
+    ports:
+      - ${DOCKER_DB_PORTS}
+    environment:
+      MYSQL_DATABASE: pampling_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      TZ: Europe/Madrid
+    command: mysqld --sql_mode="STRICT_ALL_TABLES,NO_ENGINE_SUBSTITUTION"
+    networks:
+      - pampling-network
+
+  ###> doctrine/doctrine-bundle ###
+  database:
+    image: postgres:${POSTGRES_VERSION:-16}-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+      # You should definitely change the password in production
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
+      POSTGRES_USER: ${POSTGRES_USER:-app}
+    volumes:
+      - database_data:/var/lib/postgresql/data:rw
+      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
+      # - ./docker/db/data:/var/lib/postgresql/data:rw
+###< doctrine/doctrine-bundle ###
 
 volumes:
+
+  ###> doctrine/doctrine-bundle ###
+  database_data:
+  ###< doctrine/doctrine-bundle ###
   pampling_dbdata:
 
 networks:
